RESOLVED FIXED149096
stress/exit-from-getter.js.ftl-eager occasionally traps in debug
https://bugs.webkit.org/show_bug.cgi?id=149096
Summary stress/exit-from-getter.js.ftl-eager occasionally traps in debug
Filip Pizlo
Reported 2015-09-12 13:58:13 PDT
It looks like this: stress/exit-from-getter.js.ftl-eager: test_script_9780: line 2: 2530 Trace/BPT trap: 5 "$@" ../../.vm/JavaScriptCore.framework/Resources/jsc --useFTLJIT\=false --enableFunctionDotArguments\=true --useFTLJIT\=true --ftlCrashesIfCantInitializeLLVM\=true --thresholdForJITAfterWarmUp\=10 --thresholdForJITSoon\=10 --thresholdForOptimizeAfterWarmUp\=20 --thresholdForOptimizeAfterLongWarmUp\=20 --thresholdForOptimizeSoon\=20 --thresholdForFTLOptimizeAfterWarmUp\=20 --thresholdForFTLOptimizeSoon\=20 --maximumEvalCacheableSourceLength\=150000 exit-from-getter.js stress/exit-from-getter.js.ftl-eager: ERROR: Unexpected exit code: 133 FAIL: stress/exit-from-getter.js.ftl-eager
Attachments
the patch (4.15 KB, patch)
2015-09-17 12:01 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2015-09-17 11:45:08 PDT
I have a fix.
Filip Pizlo
Comment 2 2015-09-17 12:01:42 PDT
Created attachment 261408 [details] the patch
Geoffrey Garen
Comment 3 2015-09-17 12:06:04 PDT
Comment on attachment 261408 [details] the patch r=me
Filip Pizlo
Comment 4 2015-09-17 13:27:02 PDT
Note You need to log in before you can comment on or make changes to this bug.