stress/exit-from-getter.js.ftl-eager occasionally traps in debug https://bugs.webkit.org/show_bug.cgi?id=149096

Reviewed by Geoffrey Garen.

JS calls to getters/setters in get/put inline caches need to reset SP after the call, as our
calling convention requires.

* bytecode/PolymorphicAccess.cpp:
(JSC::AccessCase::generate): Fix the bug.
* ftl/FTLLink.cpp:
(JSC::FTL::link): Adds some verbiage about why the FTL stack offset logic is correct.
* tests/stress/getter-arity.js: Added. Other tests would flaky crash before the patch. This test instacrashes before the patch.



Canonical link: https://commits.webkit.org/167374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189928 268f45cc-cd09-0410-ab3c-d52691b4dbfc